     #137681)

   * ``uncommit`` works even when the commit messages of revisions to be
     removed use characters not supported in the terminal encoding.
     (Aaron Bentley)

   * When dumb http servers return whole files instead of the requested ranges,
     read the remaining bytes by chunks to avoid overflowing network buffers.
     (Vincent Ladeuil, #175886)

  DOCUMENTATION:

   * Reference material has now be moved out of the User Guide and added
     to the User Reference. The User Reference has gained 4 sections as
     a result: Authenication Settings, Configuration Settings, Conflicts
     and Hooks. All help topics are now dumped into text format in the
     doc/en/user-reference directory for those who like browsing that
     information in their editor. (Ian Clatworthy)

   * *Using Bazaar with Launchpad* tutorial added. (Ian Clatworthy)

  INTERNALS:

    * find_* methods available for BzrDirs, Branches and WorkingTrees.
      (Aaron Bentley)

    * Help topics can now be loaded from files. 
      (Ian Clatworthy, Alexander Belchenko)

    * get_parent_map now always provides tuples as its output.  (Aaron Bentley)

    * Parent Providers should now implement ``get_parent_map`` returning a
      dictionary instead of ``get_parents`` returning a list.
      ``get_parents`` is now considered deprecated.  (John Arbash Meinel)

    * Patience Diff now supports arbitrary python objects, as long as they
      support ``hash()``. (John Arbash Meinel)

  API BREAKS:

  TESTING:

   * Modules can now customise their tests by defining a ``load_tests``
     attribute. ``pydoc bzrlib.tests.TestUtil.TestLoader.loadTestsFromModule``
     for the documentation on this attribute. (Robert Collins)

   * New helper function ``bzrlib.tests.condition_id_re`` which helps
     filter tests based on a regular expression search on the tests id.
     (Robert Collins)
    
   * New helper function ``bzrlib.tests.condition_isinstance`` which helps