@@ -107,6 +107,9 @@ IN DEVELOPMENT
 
   DOCUMENTATION:
 
+   * Minor tweaks made to the bug tracker integration documentation.
+     (Ian Clatworthy)
+
    * Reference material has now be moved out of the User Guide and added
      to the User Reference. The User Reference has gained 4 sections as
      a result: Authenication Settings, Configuration Settings, Conflicts
